--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "dependencies": {
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
-        "mongoose": "^6.2.6"
+        "mongoose": "^6.2.6",
+        "mongoose-unique-validator": "^3.0.0"
     },
     "scripts": {
         "start": "nodemon app.js"
